--- a/EmployeePayslip/EmployeePayslip.csproj
+++ b/EmployeePayslip/EmployeePayslip.csproj
@@ -101,7 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Payslip.html" />
+    <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
